<resources>
    <string name="app_name">IOTANDROID_JL</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="ingreso">Ingreso</string>
    <string name="title_activity_maps">Map</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="tienesUsusario">Ya tienes Usuario</string>
    <string name="correo">Correo Electronico</string>
    <string name="Sala">Sala</string>
    <string name="Habitacion">Habitacion 1</string>
    <string name="Habitacion2">Habitacion 2</string>
    <string name="Cocina">Cocina</string>
</resources>
