<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context="com.example.jorgelopez.iotandroid_jl.ControlActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:weightSum="1">

        <Button
            android:id="@+id/btnSala"
            android:layout_width="180dp"
            android:layout_height="256dp"
            android:hint="@string/Sala"
            android:textColorHint="@color/negro"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="@color/amarillo">

        </Button>

        <Button
            android:id="@+id/btnHabitacion"
            android:layout_width="180dp"
            android:layout_height="256dp"
            android:hint="@string/Habitacion"
            android:textColorHint="@color/negro"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="@color/amarillo">

        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/btnHabitacion2"
            android:layout_width="180dp"
            android:layout_height="256dp"
            android:hint="@string/Habitacion2"
            android:textColorHint="@color/negro"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="@color/amarillo">

        </Button>

        <Button
            android:id="@+id/btnCocina"
            android:layout_width="180dp"
            android:layout_height="256dp"
            android:hint="@string/Cocina"
            android:textColorHint="@color/negro"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="@color/amarillo">

        </Button>

    </LinearLayout>

</LinearLayout>